[gd_scene load_steps=12 format=2]

[ext_resource path="res://props/pickups/rage_coin.gd" type="Script" id=1]
[ext_resource path="res://assets/tileset.png" type="Texture" id=2]
[ext_resource path="res://assets/light_mask.png" type="Texture" id=3]
[ext_resource path="res://assets/sfx/pickup_coin.wav" type="AudioStream" id=4]

[sub_resource type="CircleShape2D" id=1]
radius = 20.0

[sub_resource type="Curve" id=2]
_data = [ Vector2( 0, 1 ), 0.0, 0.0, 0, 0, Vector2( 1, 0 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=3]
curve = SubResource( 2 )

[sub_resource type="ParticlesMaterial" id=4]
emission_shape = 1
emission_sphere_radius = 3.0
flag_disable_z = true
gravity = Vector3( 0, 40, 0 )
angular_velocity = 1.1042e+021
orbit_velocity = 0.0
orbit_velocity_random = 0.0
scale = 2.0
scale_curve = SubResource( 3 )
color = Color( 0.705882, 0.12549, 0.164706, 1 )

[sub_resource type="CircleShape2D" id=5]
radius = 2.0

[sub_resource type="CircleShape2D" id=6]
radius = 5.0

[sub_resource type="Animation" id=7]
resource_name = "cycle"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("tileset:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 0.5, 2 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, -8 ) ]
}

[node name="rage_coin" type="Area2D"]
monitorable = false
collision_layer = 0
collision_mask = 2
script = ExtResource( 1 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource( 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="tileset" type="Sprite" parent="."]
texture = ExtResource( 2 )
region_enabled = true
region_rect = Rect2( 178, 154, 4, 4 )

[node name="particles" type="Particles2D" parent="tileset"]
show_behind_parent = true
amount = 24
local_coords = false
process_material = SubResource( 4 )
__meta__ = {
"_edit_lock_": true
}

[node name="light_mask" type="Sprite" parent="tileset"]
modulate = Color( 1, 0.537255, 0.537255, 0.439216 )
show_behind_parent = true
scale = Vector2( 0.3, 0.3 )
texture = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource( 5 )
__meta__ = {
"_edit_lock_": true
}

[node name="hit_player" type="Area2D" parent="."]
visible = false
collision_layer = 0
collision_mask = 2
__meta__ = {
"_edit_lock_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="hit_player"]
shape = SubResource( 6 )
__meta__ = {
"_edit_lock_": true
}

[node name="anim" type="AnimationPlayer" parent="."]
autoplay = "cycle"
anims/cycle = SubResource( 7 )

[node name="terminate_timer" type="Timer" parent="."]
one_shot = true

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
bus = "sfx"
[connection signal="body_entered" from="." to="." method="_on_rage_coin_body_entered" flags=7]
[connection signal="body_entered" from="hit_player" to="." method="_on_hit_player_body_entered" flags=7]
